# lotxt

./: .gitignore  README.md  build.bat  build_check.bat  build_check.ps1  build_check2.bat  cargo_result.txt  generate-icon.mjs  index.html  install_sdk.bat  package-lock.json  package.json  run-dev.bat  run-dev.ps1  tailwind.config.js
.claude/: settings.local.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  scheduler.rs
src-tauri/src/commands/: ai.rs  audience.rs  credentials.rs  export.rs  images.rs  mod.rs  platform.rs  revenue.rs  scheduler.rs
src-tauri/src/services/: beehiiv.rs  ghost.rs  kit.rs  linkedin.rs  mod.rs  stripe.rs  substack.rs  twitter.rs
src/components/accounts/: AccountCard.tsx  AccountsWorkspace.tsx  AddAccountDialog.tsx  AiProviderSettings.tsx  NewsletterPreview.tsx  PreflightChecklist.tsx  PublishDialog.tsx
src/components/analytics/: AddRevenueDialog.tsx  AnalyticsWorkspace.tsx  AudienceTab.tsx  (+14 more)
src/lib/: analytics-insights.ts  canvas-templates.ts  editor-extensions.ts  error-handler.ts  newsletter-templates.ts  platforms.ts  readability.ts  utils.ts
src/stores/: accounts-store.ts  ai-store.ts  analytics-store.ts  audience-store.ts  calendar-store.ts  canvas-store.ts  capture-store.ts  command-store.ts  distribute-store.ts  editor-store.ts  focus-store.ts  growth-store.ts  holdco-store.ts  image-store.ts  onboarding-store.ts  projects-store.ts  publish-store.ts  revenue-store.ts  session-store.ts  settings-store.ts  social-store.ts  sponsors-store.ts  streak-store.ts  theme-store.ts  toast-store.ts  workspace-store.ts
src/styles/: globals.css
src/types/: accounts.ts  ai.ts  canvas.ts  social.ts
(+61 files in other folders)
