[package]
name = "station"
version = "0.1.0"
description = "Social content word processor for newsletter creators"
authors = ["Station"]
edition = "2021"

[lib]
name = "station_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
docx-rs = "0.4"
printpdf = "0.7"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
base64 = "0.22"
jsonwebtoken = "9"
futures-util = "0.3"
hmac = "0.12"
sha1 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
